--- a/app/src/main/res/layout/activity_list_content.xml
+++ b/app/src/main/res/layout/activity_list_content.xml
@@ -11,11 +11,27 @@
 
     <include layout="@layout/view_toolbar" />
 
-    <FrameLayout
-        android:id="@+id/content"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.travazar.tour.packages.ui.views.list.topattraction.TopAttractionLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium" />
+
+            <FrameLayout
+                android:id="@+id/content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
     <com.travazar.tour.packages.ui.views.ListOptionView
         android:id="@+id/list_option_view"
