--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -16,16 +17,21 @@
 
         <com.travazar.tour.packages.ui.views.list.category.CategoryListViewLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:showMoreButton="false" />
 
-        <com.travazar.tour.packages.ui.views.list.toppackage.TopTourPackageLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <com.travazar.tour.packages.ui.views.list.topattraction.TopAttractionLayout
+        <com.travazar.tour.packages.ui.views.list.toppackage.TourPackageListLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_huge" />
+            app:showMoreButton="false"
+            app:title="@string/title_top_packages" />
+
+        <com.travazar.tour.packages.ui.views.list.topattraction.AttractionListLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_huge"
+            app:showMoreButton="false"
+            app:title="@string/title_top_attractions" />
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
