--- a/app/src/main/res/layout/view_image_slider.xml
+++ b/app/src/main/res/layout/view_image_slider.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:background="@color/colorPrimary">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
+        android:id="@+id/slider_view_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -23,7 +22,7 @@
 
 
         <TextView
-            android:id="@+id/text_title"
+            android:id="@+id/text_slider_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/grey_200"
@@ -40,7 +39,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/text_indicator_right_top"
+        android:id="@+id/text_slider_indicator_right_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
