--- a/app/src/main/res/layout/fragment_attraction_list.xml
+++ b/app/src/main/res/layout/fragment_attraction_list.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/view_item_attraction" />
-</LinearLayout>
+        android:orientation="vertical">
+
+        <com.travazar.tour.packages.ui.views.list.topattraction.AttractionListLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_medium"
+            app:showMoreButton="false"
+            app:title="@string/title_top_attractions" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/attraction_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/view_item_attraction" />
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
