--- a/app/src/main/res/layout/view_item_attraction.xml
+++ b/app/src/main/res/layout/view_item_attraction.xml
@@ -4,7 +4,6 @@
   -->
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="150dp"
@@ -12,7 +11,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/image_thumbnail"
+        android:id="@+id/image_attraction_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="centerCrop"
@@ -26,7 +25,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text_title"
+            android:id="@+id/text_attraction_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -36,7 +35,7 @@
             tools:text="Attraction Name" />
 
         <TextView
-            android:id="@+id/text_address"
+            android:id="@+id/text_attraction_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -44,14 +43,14 @@
             tools:text="Bohol, Philippines" />
 
         <android.support.v7.widget.AppCompatRatingBar
-            android:id="@+id/rating_bar"
+            android:id="@+id/attraction_rating_bar"
             style="@style/Base.Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:rating="4" />
 
         <TextView
-            android:id="@+id/text_total_reviews"
+            android:id="@+id/text_attraction_total_reviews"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
