--- a/app/src/main/res/layout/view_item_top_tour_package.xml
+++ b/app/src/main/res/layout/view_item_top_tour_package.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/image_thumbnail"
+            android:id="@+id/image_package_thumbnail"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginBottom="@dimen/margin_small"
@@ -23,7 +23,7 @@
             android:src="@drawable/dummy_image_preview" />
 
         <TextView
-            android:id="@+id/text_title"
+            android:id="@+id/text_package_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_small"
@@ -33,7 +33,7 @@
             android:textSize="@dimen/button" />
 
         <android.support.v7.widget.AppCompatRatingBar
-            android:id="@+id/rating_bar"
+            android:id="@+id/package_rating_bar"
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
             android:background="@color/grey_200" />
 
         <TextView
-            android:id="@+id/text_rating"
+            android:id="@+id/text_package_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_small"
@@ -61,7 +61,7 @@
 
 
         <TextView
-            android:id="@+id/text_total_reviews"
+            android:id="@+id/text_package_total_reviews"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_small"
@@ -78,7 +78,7 @@
             android:background="@color/grey_200" />
 
         <TextView
-            android:id="@+id/text_short_description"
+            android:id="@+id/text_package_short_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_small"
@@ -98,7 +98,7 @@
             android:background="@color/grey_200" />
 
         <TextView
-            android:id="@+id/text_price"
+            android:id="@+id/text_package_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
