--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,7 +4,12 @@
   -->
 
 <resources>
+    <attr name="title" format="string" />
     <declare-styleable name="InfoView">
-        <attr name="title" format="string" />
+        <attr name="title" />
+    </declare-styleable>
+    <declare-styleable name="ListViewLayout">
+        <attr name="title" />
+        <attr name="showMoreButton" format="boolean" />
     </declare-styleable>
 </resources>
