--- a/app/src/main/res/layout/view_toolbar_image_slider.xml
+++ b/app/src/main/res/layout/view_toolbar_image_slider.xml
@@ -4,6 +4,7 @@
     android:id="@+id/app_bar_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
     android:theme="@style/AppTheme.AppBarOverlay">
 
     <android.support.design.widget.CollapsingToolbarLayout
@@ -11,12 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
+        android:fitsSystemWindows="true"
         app:contentScrim="?attr/colorPrimary"
         app:expandedTitleMarginBottom="50dp"
         app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
         <com.travazar.tour.packages.ui.views.imageslider.ImageSlider
             android:id="@+id/image_slider"
+            android:fitsSystemWindows="true"
             android:layout_width="match_parent"
             android:layout_height="@dimen/toolbar_image_height"
             app:layout_collapseMode="parallax" />
