--- a/app/src/main/res/menu/left_navigation.xml
+++ b/app/src/main/res/menu/left_navigation.xml
@@ -6,6 +6,7 @@
 
         <item
             android:id="@+id/navigation_item_home"
+            android:checked="true"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/title_home" />
         <item
