add searchviewlayout on tour package and attraction list activity

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -10,7 +10,7 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <include layout="@layout/view_toolbar" />
+    <include layout="@layout/view_toolbar_location_search" />
 
     <FrameLayout
         android:id="@+id/content"
