--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="selectedDark">#1d5b80</color>
     <color name="notSelected">#00a6e2</color>
     <color name="text_primary_light">@color/grey_100</color>
+    <color name="white">#ffffff</color>
 
 </resources>
