--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="notSelected">#00a6e2</color>
     <color name="text_primary_light">@color/grey_100</color>
     <color name="white">#ffffff</color>
+    <color name="app_theme_color">#31b7ec</color>
 
 </resources>
